--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,11 @@
   <body>
     <h1>Peppermintttt</h1>
 
-    <div>
-      여기다가 뭘 넣지
+    <div id = "sub">
+    <a>content_1</a>
+    <a>content_2</a>
+    <a>content_3</a>
+    <a>content_4</a>
     </div>
   </body>
 
