색상 변경 및 사이즈 조정
색상 변경 및 사이즈 조정

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,8 @@
 
 
   <body>
-    <h1>Peppermintttt</h1>
+    <p class = "title">Peppermintttt</p>
+    <p class = "subtitle">welcome to my site</p>
 
     <div id = "sub">
     <a>content_1</a>
