--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,13 @@
     <a>content_3</a>
     <a>content_4</a>
     </div>
+
+
+    <div id="cols">
+      <a>1</a>
+      <a>2</a>
+    </div>
+
   </body>
 
 
